# Infotecs

./: CMakeLists.txt  README.md
Program_1/: CMakeLists.txt  Makefile  cmake_install.cmake
Program_1/sources/: bufferprocessor.cpp  bufferprocessor.h  inputhandler.cpp  inputhandler.h
Program_2/: CMakeLists.txt
Program_2/sources/: client.cpp  main.cpp  receivehandler.cpp  receivehandler.h
lib/: CMakeLists.txt  lib.cpp  lib.h
